data/list.css
/*
 *  Created by Martin Giger
 *  Licensed under the MPL 2.0
 */

html, body {
    height: 100%;
}

body {
    padding: 0;
    margin: 0;
    font-family: sans-serif;
    line-height: 1.2em;

    -moz-user-select: none;
    overflow-x: hidden;
}

ul {
    margin: 0;
    padding: 0;
}

a {
    margin: 0;
}

nav {
    position: sticky;
    top: 0;
    z-index: 10;
}

.loading {
    cursor: progress !important;
}

.toolbar li, .tabstrip li {
    display: inline;
    list-style-type: none;
}


.tabstrip {
    padding: 0;
    margin: 0;
    background: #2c24c5;
}

.tabstrip a:link, .tabstrip a:hover, .tabstrip a:active, .tabstrip a:visited,
.toolbar a:link, .toolbar a:hover, .toolbar a:active, .toolbar a:visited {
    color: white;
    text-decoration: none;
    display: inline-block;
    padding:.5em;
}

.tabstrip a.current, .toolbar a:hover, .toolbar a:active, .toolbar a[aria-pressed="true"] {
    background: #497dfe;
}

.toolbar {
    position: absolute;
    margin: 0;
    padding: 0;

    top: 0;
    right: 0;
}

#searchField, #exploreprovider {
    width: 100%;
}

#refreshButton.running {
    cursor: progress;
}

.tabcontent {
    padding: 0;
    margin: 0;
}

.tabcontent li {
    padding: 0;
    margin: 0;
    list-style: none;
}

.tabcontent li a, .tabcontent li a:link, .tabcontent li a:hover, .tabcontent li a:active, .tabcontent li a:visited {
    text-decoration: none;
    color: initial;
    cursor: context-menu;
    display: block;
}

.compact .tabcontent li a, .default .tabcontent li a, .thumbnail .tabcontent:not(.live) li a, .thumbnail .live li div, .tabcontent > span {
    padding: .3em;
}

.tabcontent li div img {
    margin-right: .3em;
    float: left;
}

.compact .tabcontent li a {
    min-height: 1em;
}

.compact .tabcontent li div img {
    vertical-align: text-bottom;
    width: 1em;
    height: 1em;
}

.default .tabcontent li a, .thumbnail .tabcontent li a {
    min-height: 30px;
}

.thumbnail .live li a>img {
    width: 100%;
    display: block;
}

.thumbnail .live li {
    position: relative;
    width: 100%;
}

.thumbnail .live li div {
    position: absolute;
    width: calc(100% - .6em);
    bottom: 0;
}

.default .tabcontent li div img, .thumbnail .tabcontent li div img {
    width: 30px;
    height: 30px;
    vertical-align: middle;
}

.compact .tabcontent li a>img, .default .tabcontent li a>img, .tabcontent:not(.live) li a>img , .compact .tabcontent li .title,
.tabcontent:not(.live) .hide-offline, [hidden], aside {
    display: none !important;
    visibility: hidden;
}

.extras aside {
    display: block;
    visibility: visible;
    opacity: 0.7;
}

.icon {
    display: inline-block;
    height: .9em;
    width: .9em;
    fill: currentColor;
}

.nonlivename {
    display: none;
    visibility: hidden;
}

.nonlive .nonlivename {
    display: inline;
    visibility: visible;
}

.live:not([data-tab="4"]) .nonlive div > img {
    filter: grayscale(100%);
}

/* Type specific styles */

.thumbnail .live a div {
    background: rgba(255, 255, 255, 0.7);
}

.tabcontent a:hover, .thumbnail li a:hover div {
    background: white;
}

.thumbnail .live .twitch a div {
    background: rgba(117, 80, 186, 0.7);
    color: white;
}

.twitch a:hover, .thumbnail .twitch a:hover div {
    background: #7550BA !important;
    color: white !important;
}

.thumbnail .live .hitbox a div {
    background: rgba(20, 20, 20, 0.7);
    color: #ACE600;
}

.hitbox a:hover, .thumbnail .hitbox a:hover div {
    background: #141414 !important;
    color: #ACE600 !important;
}

.thumbnail .live .ustream a div {
    color: #303030;
}

.ustream a:hover, .thumbnail .ustream a:hover div {
    background: -moz-linear-gradient(center top , white 80%, #FAFAFA 100%) !important;
    color: #303030 !important;
}

.thumbnail .live .youtube a div {
    background: rgba(204, 24, 30, 0.7);
    color: #FFF;
}

.youtube a:hover, .thumbnail .youtube a:hover div {
    background: #CC181E !important;
    color: #FFF !important;
    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.25);
}

.thumbnail .live .livestream a div {
    background: -moz-linear-gradient(center top, rgba(59, 59, 59, 0.7) 0%,
        rgba(56, 56, 56, 0.7) 16%, rgba(30, 30, 30, 0.7) 80%,
        rgba(25, 25, 25, 0.7) 98%, rgba(0, 0, 0, 0.7) 100%);
    color: #FFF;
}

.livestream a:hover, .thumbnail .livestream a:hover div {
    background: -moz-linear-gradient(center top, rgb(59, 59, 59) 0%,
        rgb(56, 56, 56) 16%, rgb(30, 30, 30) 80%,
        rgb(25, 25, 25) 98%, rgb(0, 0, 0) 100%) !important;
    color: #FFF !important;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
}

.thumbnail .live .mlg a div {
    background: rgba(60, 125, 230, 0.7);
    color: #FFF;
}

.mlg a:hover, .thumbnail .mlg a:hover div {
    background: #3C9BE6 !important;
    color: #FFF !important;
}

.thumbnail .live .azubu a div {
    background: rgba(0, 0, 0, 0.7);
    color: #3693E0;
}

.azubu a:hover, .thumbnail .azubu a:hover div {
    background: #000 !important;
    color: #3693E0 !important;
}

.thumbnail .live .beam a div {
    background: rgba(17, 19, 27, 0.7);
    color: white;
}

.beam a:hover, .thumbnail .beam a:hover div {
    background: #11131B !important;
    color: white !important;
}

.thumbnail .live .picarto a div {
    background: rgba(37, 49, 63, 0.7);
    color: white;
}

.picarto a:hover, .thumbnail .picarto a:hover div {
    background: rgb(37, 49, 63) !important;
    color: white !important;
}

.thumbnail .live .newlivestream a div {
    color: #CF202E;
}

.newlivestream a:hover, .thumbnail .newlivestream a:hover div {
    background: white !important;
    color: #CF202E !important;
}

.thumbnail .live .streamup a div {
    color: rgb(85, 98, 255);
}

.streamup a:hover, .thumbnail .streamup a:hover div {
    background: white !important;
    color: rgb(85, 98, 255) !important;
}

.thumbnail .live .douyutv a div {
    background-color: rgba(255, 119, 0, 0.7);
    color: white;
}

.douyutv a:hover, .thumbnail .douyutv a:hover div {
    background: rgb(255, 119, 0) !important;
    color: white !important;
}

